# video-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  OPUS_COMPREHENSIVE_HANDOFF.md  README.md  pyproject.toml
.cursor/: mcp.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/luts/: .gitignore  bw.cube  cinematic.cube  cool.cube  flat.cube  vivid.cube  warm.cube
docs/: OPUS_PLANNING_HANDOFF.md  architecture.md  custom-mcp-server.md  implementation-plan.md  tools.md
docs/plan/: MASTER_PLAN.md  phase-01-foundation.md  phase-02-media-inspection.md  phase-03-timeline-otio.md  phase-04-beat-sync.md  phase-05-render-engine.md  phase-06-effects.md  phase-07-color-grading.md  phase-08-validation.md  phase-09-workflow.md  phase-10-hardening.md  phase-11-integration-testing.md  phase-12-release.md  phase-13-media-intelligence.md  phase-14-tool-certification.md
scripts/: benchmark.py  setup.sh  verify.sh
src/mcp_editor/: __init__.py  _bench.py  beat_sync.py  config.py  diagnostics.py  effects.py  grading.py  inspection.py  logging.py  media.py  media_docs.py  projects.py  references.py  render.py  schemas.py  server.py  sourcing.py  timeline.py  timeline_ops.py  validation.py  workflow.py
tests/: conftest.py
tests/integration/: test_real_media.py  test_workflow_integration.py
tests/unit/: test_auto_generate.py  test_beat_sync.py  test_diagnostics.py  test_effects.py  test_grading.py  test_hardening.py  test_inspection.py  test_media_docs.py  test_projects.py  test_references.py  test_render.py  test_render_workflow.py  test_schemas.py  test_sourcing.py  test_timeline.py  test_timeline_ops.py  test_validation.py  test_validation_phase8.py  test_workflow_phase9.py
