[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-editor"
version = "0.8.0"
description = "Headless MCP video editing server for local AI agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "mhughesdev"},
]
keywords = ["mcp", "video", "editing", "ffmpeg", "ai", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "opentimelineio>=0.17",
  "mcp>=1.0",
  "librosa>=0.10",
  "ffmpeg-python>=0.2",
  "pydantic>=2.0",
  "yt-dlp>=2024.1",
  "requests>=2.31",
  "Pillow>=10.0",
]

[project.scripts]
mcp-editor = "mcp_editor.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "realmedia: tests that require real FFmpeg and synthesized media fixtures (deselect with -m 'not realmedia')",
]
